--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,31 +1,93 @@
-name: main CI
+name: Trigger Other Workflows
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_dispatch:  
 
 jobs:
-  build-and-push:
+  trigger-workflows:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Trigger adservice workflow
+        uses: peter-evans/workflow-dispatch@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/adservice
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - name: Trigger checkoutservice workflow
+        uses: peter-evans/workflow-dispatch@v1
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/main:latest
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/checkoutservice
+
+      - name: Trigger emailservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/emailservice
+
+      - name: Trigger loadgenerator workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/loadgenerator
+
+      - name: Trigger paymentservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/paymentservice
+
+      - name: Trigger recommendationservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/recommendationservice
+
+      - name: Trigger cartservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/cartservice
+
+      - name: Trigger currencyservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/currencyservice
+
+      - name: Trigger frontend workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/frontend
+
+      - name: Trigger main workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/main
+
+      - name: Trigger productcatalogservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/productcatalogservice
+
+      - name: Trigger shippingservice workflow
+        uses: peter-evans/workflow-dispatch@v1
+        with:
+          repository: ${{ github.repository }}
+          workflow: ci.yaml
+          ref: refs/heads/shippingservice
