--- a/kubernetes-manifest/configmap.yaml
+++ b/kubernetes-manifest/configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: env
+  name: env-config
+  namespace: microservices
 data:
     CHECKOUT_SERVICE_ADDR : "checkoutservice:5050"
     CURRENCY_SERVICE_ADDR : "currencyservice:7000"
@@ -13,3 +14,34 @@ data:
     EMAIL_SERVICE_ADDR: "emailservice:5000"
     PAYMENT_SERVICE_ADDR: "paymentservice:50051"
     DISABLE_PROFILER: "true"
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-config
+  namespace: microservices
+data:
+  nginx.conf: |
+    events {
+      worker_connections 1024;
+    }
+
+    http {
+      upstream frontend {
+        server frontend.microservices.svc.cluster.local:8080;
+      }
+
+      server {
+        listen 80;
+        
+        location / {
+          proxy_pass http://frontend;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        
+      }
+    }
