--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,9 +47,9 @@ jobs:
           echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig.yaml
           export KUBECONFIG=kubeconfig.yaml
 
-      # - name: Set up kubectl context
-      #   run: |
-      #     kubectl config use-context ${{ secrets.KUBE_CONTEXT }}
+      - name: Set up kubectl context
+        run: |
+          kubectl config use-context ${{ secrets.KUBE_CONTEXT }}
 
       
 
