--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,8 +20,7 @@ jobs:
 
       - name: Configure kubectl
         run: |
-          echo "${{ vars.KUBE_CONFIG }}" > kubeconfig.yaml
-          export KUBECONFIG=kubeconfig.yaml
+          echo "${{ vars.KUBE_CONFIG }}" > ~/.kube/config
 
       - name: Debug KUBE_CONTEXT secret
         run: echo "KUBE_CONTEXT is set to ${{ vars.KUBE_CONTEXT }}"
