--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,5 @@
-name: frontend CI
+
+name: frontend CI/CD
 
 on:
   push:
@@ -7,7 +8,31 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -25,7 +50,7 @@ jobs:
 
       - name: Set up kubectl context
         run: |
-          kubectl config use-context ${{ vars.KUBE_CONTEXT }}
+          kubectl config use-context ${{ secrets.KUBE_CONTEXT }}
         
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -43,3 +68,4 @@ jobs:
       - name: Verify the deployment
         run: |
           kubectl get pods
+
