--- a/kubernetes-manifest/deployment.yaml
+++ b/kubernetes-manifest/deployment.yaml
@@ -556,6 +556,60 @@ spec:
     - protocol: TCP
       port: 8080
 ---
+# loadgenerator service
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: loadgenerator
+  namespace: microservices
+  annotations:
+    kubernetes.io/change-cause: "Version 0.0.1"
+spec:
+  replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 0
+  selector:
+    matchLabels:
+      app: online-boutique
+      role: loadgenerator
+  template:
+    metadata:
+      labels:
+        app: online-boutique
+        role: loadgenerator
+    spec:
+      containers:
+        - name: loadgenerator-container
+          image: janisadhi/loadgenerator:latest
+          envFrom:
+          - configMapRef:
+              name: env-config
+          ports:
+            - containerPort: 8080
+          resources:
+            requests:
+              cpu: 100m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: loadgenerator
+  namespace: microservices
+spec:
+  selector:
+    role: loadgenerator
+  
+  ports:  
+    - protocol: TCP
+      port: 8080
+---
 # nginx-reverse-proxy
 apiVersion: apps/v1
 kind: Deployment
